JEKT-323 Source Creation and MANDT Filter

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -750,6 +750,22 @@ pipelines:
       - datasets/MD_MATL_LOC
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC:
+    name: SAP_01_MD_SLS_DOC_PTNR_FUNC
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-03 12:09:01'
+    modifiedAt: '2023-04-03 12:23:03'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBPA
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/STRCT_MD_HU_SER:
     name: STRCT_MD_HU_SER
@@ -5986,6 +6002,36 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-03-20 13:20:21'
         modifiedAt: '2023-03-20 13:20:21'
+  datasets/DS_SAP_01_VBPA:
+    name: DS_SAP_01_VBPA
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-03 12:14:39'
+    modifiedAt: '2023-04-03 12:14:39'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-03 12:14:39'
+        modifiedAt: '2023-04-03 12:14:39'
+  datasets/DS_SAP_01_VBAK:
+    name: DS_SAP_01_VBAK
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-03 12:17:22'
+    modifiedAt: '2023-04-03 12:17:22'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-03 12:17:22'
+        modifiedAt: '2023-04-03 12:17:22'
 templates: {}
 jobs:
   jobs/JOB_TBL_STRCT_MD:
