--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6428,6 +6428,32 @@ jobs:
     createdAt: '2023-03-22 22:18:58'
     modifiedAt: '2023-03-27 22:13:56'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_PO_SCHED_LINE_DELV:
+    name: JOB_MD_PO_SCHED_LINE_DELV
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-03 13:50:02'
+    modifiedAt: '2023-04-03 13:59:04'
+    author: jcacere7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
