JEKT-352 ❇️ New target dataset     - Dataset        - MD_DELV_LINE
🔁 Modified
    - Pipeline
       - SAP_MD_DELV_LINE_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,7 +20,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-31 18:26:24'
-    modifiedAt: '2023-04-03 15:25:05'
+    modifiedAt: '2023-04-03 15:33:02'
     datasets:
       inputs:
       - datasets/DS_SAP_01_LIKP
@@ -28,7 +28,8 @@ pipelines:
       - datasets/DS_SAP_01_TVM4T
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBAP
-      outputs: []
+      outputs:
+      - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
 datasets:
@@ -107,6 +108,21 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-03-31 18:54:32'
         modifiedAt: '2023-03-31 18:54:32'
+  datasets/MD_DELV_LINE:
+    name: MD_DELV_LINE
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-03 15:32:57'
+    modifiedAt: '2023-04-03 15:32:57'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-03 15:32:57'
+        modifiedAt: '2023-04-03 15:32:57'
 templates: {}
 jobs: {}
 functions:
