🔁 JEKT-226     - New Dataset Created        - MD_BILL_DOC_HDR     - Job        - JOB_MD_BILL_DOC_HDR     - New Pipeline        - SAP_01_MD_BILL_DOC_HDR
❇️ New
    - Pipeline
       - MD_BILL_DOC_HDR_BBL
    - Dataset
       - DS_SAP_02_VBRK

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -789,7 +789,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 17:43:31'
-    modifiedAt: '2023-03-31 15:01:05'
+    modifiedAt: '2023-04-03 16:20:08'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
@@ -797,6 +797,26 @@ pipelines:
       - datasets/DS_SAP_01_TVKOT
       - datasets/DS_SAP_01_TVTWT
       - datasets/DS_SAP_01_VBRK
+      outputs:
+      - datasets/MD_BILL_DOC_HDR
+    subgraphs: []
+    dependencies: {}
+  pipelines/MD_BILL_DOC_HDR_BBL:
+    name: MD_BILL_DOC_HDR_BBL
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-03 16:23:58'
+    modifiedAt: '2023-04-03 16:42:11'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TSPAT
+      - datasets/DS_SAP_01_TVFKT
+      - datasets/DS_SAP_01_TVKOT
+      - datasets/DS_SAP_01_TVTWT
+      - datasets/DS_SAP_02_VBRK
       outputs:
       - datasets/MD_BILL_DOC_HDR
     subgraphs: []
@@ -1107,7 +1127,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-31 14:46:28'
+    modifiedAt: '2023-04-03 16:42:10'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6067,6 +6087,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-03-20 22:53:20'
         modifiedAt: '2023-03-20 22:53:20'
+  datasets/DS_SAP_02_VBRK:
+    name: DS_SAP_02_VBRK
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-03 16:36:52'
+    modifiedAt: '2023-04-03 16:38:28'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-03 16:36:53'
+        modifiedAt: '2023-04-03 16:36:53'
 templates: {}
 jobs:
   jobs/JOB_TBL_STRCT_MD:
@@ -6454,7 +6489,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-03-30 17:13:45'
-    modifiedAt: '2023-03-31 14:11:13'
+    modifiedAt: '2023-04-03 16:18:12'
     author: hgermi1@its.jnj.com
 functions:
   author: null
@@ -6467,6 +6502,6 @@ functions:
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
