--- a/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_BILL_DOC_HDR/pbt_aspects.yml
@@ -506,13 +506,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PRCH_ORDR_TYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: BILL_DOC_IS_CAN
     type: string
     nullable: true
@@ -536,6 +529,41 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l0_upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_md5_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
