JEKT-14 New     - Pipeline        - SAP_MD_BOM_HDR_BBA_BBN_HCS_MRS
🔁 Modified
    - Pipeline
       - SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
    - Dataset
       - MD_BOM_HDR
       - SAP_01_STKO

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -754,7 +754,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-23 21:33:02'
-    modifiedAt: '2023-03-30 13:41:17'
+    modifiedAt: '2023-04-03 17:17:48'
     datasets:
       inputs:
       - datasets/SAP_02_STKO
@@ -774,6 +774,22 @@ pipelines:
     datasets:
       inputs:
       - datasets/JDE_F3002_ADT
+      outputs:
+      - datasets/MD_BOM_HDR
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_BOM_HDR_BBA_BBN_HCS_MRS:
+    name: SAP_MD_BOM_HDR_BBA_BBN_HCS_MRS
+    description: ''
+    author: smille29@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-03 13:51:17'
+    modifiedAt: '2023-04-03 14:35:53'
+    datasets:
+      inputs:
+      - datasets/SAP_01_STKO
       outputs:
       - datasets/MD_BOM_HDR
     subgraphs: []
@@ -2449,7 +2465,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-30 13:41:17'
+    modifiedAt: '2023-04-03 14:06:23'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
