--- a/src/datasets/MD_BOM_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_BOM_HDR/pbt_aspects.yml
@@ -93,6 +93,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BOM_VLD_TO_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: DEL_IND
     type: string
     nullable: true
