--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -19,53 +19,17 @@ pipelines:
     mode: batch
     artefactID: ''
     language: python
-    createdAt: '2023-03-31 15:58:58'
-    modifiedAt: '2023-03-31 15:59:27'
+    createdAt: '2023-04-03 18:08:25'
+    modifiedAt: '2023-04-03 18:09:14'
     datasets:
-      inputs: []
-      outputs: []
-    subgraphs: []
-    dependencies: {}
-  pipelines/SAP_MD_DELV_LINE_BWI_TAI:
-    name: SAP_MD_DELV_LINE_BWI_TAI
-    description: ''
-    author: jcovezd1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-31 16:01:38'
-    modifiedAt: '2023-03-31 16:01:51'
-    datasets:
-      inputs: []
-      outputs: []
-    subgraphs: []
-    dependencies: {}
-  pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL:
-    name: SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
-    description: ''
-    author: jcovezd1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-31 16:03:34'
-    modifiedAt: '2023-03-31 16:03:47'
-    datasets:
-      inputs: []
-      outputs: []
-    subgraphs: []
-    dependencies: {}
-  pipelines/SAP_MD_BILL_DELV_MBP:
-    name: SAP_MD_DELV_LINE_MBP
-    description: ''
-    author: jcovezd1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-31 16:05:27'
-    modifiedAt: '2023-03-31 16:07:42'
-    datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_01_LIKP
+      - datasets/DS_SAP_01_LIPS
+      - datasets/DS_SAP_01_TVM4T
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
+      outputs:
+      - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
 datasets: {}
