JEKT-314 ❇️ New datasets     - Dataset        - DS_SAP_01_LIPS        - DS_SAP_01_VBAP        - DS_SAP_01_LIKP        - DS_SAP_01_VBAK
🔁 Modified
    - Pipeline
       - SAP_MD_DELV_LINE_BBA_BBL_BBN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,7 +20,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-03 18:08:25'
-    modifiedAt: '2023-04-03 18:23:11'
+    modifiedAt: '2023-04-03 18:40:08'
     datasets:
       inputs:
       - datasets/DS_SAP_01_LIKP
@@ -32,7 +32,67 @@ pipelines:
       - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
-datasets: {}
+datasets:
+  datasets/DS_SAP_01_LIPS:
+    name: DS_SAP_01_LIPS
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-03 18:36:36'
+    modifiedAt: '2023-04-03 18:36:36'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-03 18:36:36'
+        modifiedAt: '2023-04-03 18:36:36'
+  datasets/DS_SAP_01_LIKP:
+    name: DS_SAP_01_LIKP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-03 18:37:55'
+    modifiedAt: '2023-04-03 18:37:56'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-03 18:37:55'
+        modifiedAt: '2023-04-03 18:37:55'
+  datasets/DS_SAP_01_VBAK:
+    name: DS_SAP_01_VBAK
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-03 18:39:06'
+    modifiedAt: '2023-04-03 18:39:06'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-03 18:39:06'
+        modifiedAt: '2023-04-03 18:39:06'
+  datasets/DS_SAP_01_VBAP:
+    name: DS_SAP_01_VBAP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-03 18:40:04'
+    modifiedAt: '2023-04-03 18:40:04'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-03 18:40:04'
+        modifiedAt: '2023-04-03 18:40:04'
 templates: {}
 jobs: {}
 functions:
