--- a/src/datasets/DS_SAP_03_VBRK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_03_VBRK/pbt_aspects.yml
@@ -2,526 +2,715 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: SRC_SYS_CD
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BILL_DOC
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLORG_CD
+  - name: VBELN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLORG_DESC
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DSTR_CHNL_CD
+  - name: FKART
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DSTR_CHNL_DESC
+  - name: FKTYP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLS_DIV_CD
+  - name: VBTYP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLS_DIV_DESC
+  - name: WAERK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BILL_TYPE_CD
+  - name: VKORG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BILL_TYPE_DESC
+  - name: VTWEG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BILL_CAT
+  - name: KALSM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DOC_CAT
+  - name: KNUMV
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PYR
+  - name: VSBED
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SOLD_TO
+  - name: FKDAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BILL_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BILL_INVC_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRNCY_CD
+  - name: BELNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CRT_BY
+  - name: GJAHR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRC_PCDR_CD
+  - name: POPER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DOC_COND_OWN_COND
+  - name: KONDA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SHIPPING_COND_CD
+  - name: KDGRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FISC_YR
+  - name: BZIRK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PSTNG_PER
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CUST_GRP_CD
+  - name: PLTYP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: INTNL_COM_CD
+  - name: INCO1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DEL_DPRT_PT_CD
+  - name: INCO2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PSTNG_STS
+  - name: EXPKZ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXCH_RT_FIN_PSTNG
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ADDL_VAL_DAYS
+  - name: RFBSK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FX_VAL_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PMT_TERM_CD
+  - name: MRNKZ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ACCT_ASGNMT_GRP
+  - name: KURRF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CTRY_CD
+  - name: CPKUR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: REGION_CD
+  - name: VALTG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CO_CD
+  - name: VALDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_1
+  - name: ZTERM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NET_VAL_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: COMB_CRITA
+  - name: ZLSCH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STATS_CRNCY
+  - name: KTGRD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CHG_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INVC_LIST_TYPE
+  - name: LAND1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CNTL_AREA_CD
+  - name: REGIO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CR_ACCT
+  - name: COUNC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CRNCY_CR_CNTL_AREA
+  - name: CITYC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CR_DX_RT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: HIER_TYPE_PRC
+  - name: BUKRS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CUST_PO_NUM
+  - name: TAXK1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TRAD_PTNR_CO_CD
+  - name: TAXK2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_DPRT_CTRY
+  - name: TAXK3
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ORIG_VAT_NUM
+  - name: TAXK4
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CTRY_VAT_NUM
+  - name: TAXK5
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: REF_DOC_NUM
+  - name: TAXK6
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ASGNMT_NUM
+  - name: TAXK7
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LOGL_SYS
+  - name: TAXK8
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TRNL_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PMT_REF
+  - name: TAXK9
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NUM_OF_PG
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CUST_PRC_GRP
+  - name: NETWR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SLS_DSTRC
+  - name: ZUKRI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRC_LIST_TYPE
+  - name: ERNAM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_2
+  - name: ERZET
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_3
+  - name: ERDAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_4
+  - name: STAFO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_5
+  - name: KUNRG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_6
+  - name: KUNAG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_7
+  - name: MABER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_8
+  - name: STWAE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TAX_CLSN_9
+  - name: EXNUM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BILL_DOC_IS_CAN
+  - name: STCEG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_ETL_ID
-    type: integer
-    nullable: false
+  - name: AEDAT
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_CRT_DTTM
-    type: timestamp
-    nullable: false
+  - name: SFAKN
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
+  - name: KNUMA
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
-    type: timestamp
+  - name: FKART_RL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FKDAT_RL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KURST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSCHL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MANSP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPART
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KKBER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KNKLI
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CMWAE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CMKUF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HITYP_PR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BSTNK_VF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VBUND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FKART_AB
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KAPPL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LANDTX
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STCEG_H
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STCEG_L
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: XBLNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZUONR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MWSBK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LOGSYS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FKSTO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: XEGDR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RPLNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LCNUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: J_1AFITP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KURRF_DAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AKWAE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AKKUR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: KIDNO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BVTYP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NUMPG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BUPLA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VKONT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FKK_DOCSTAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NRZAS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPE_BILLING_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZAUTH_SIG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZACVDIRECT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBSTZD
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -534,23 +723,37 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_md5_
-    type: string
+  - name: _upt_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
-    type: timestamp
-    nullable: false
+  - name: _kafkaOffset_
+    type: long
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _createTime_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _kafkaTimestamp_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _infa_bigint_sequence_
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
