🔁 JEKT-226     - Pipeline Configuration        - SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI     - Job        - JOB_MD_BILL_DOC_HDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -829,7 +829,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-04 01:11:55'
-    modifiedAt: '2023-04-04 01:52:44'
+    modifiedAt: '2023-04-04 02:31:25'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
@@ -6519,13 +6519,14 @@ jobs:
     pipelines:
     - pipelines/SAP_01_MD_BILL_DOC_HDR
     - pipelines/MD_BILL_DOC_HDR_BBL
+    - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-03-30 17:13:45'
-    modifiedAt: '2023-04-04 01:08:45'
+    modifiedAt: '2023-04-04 01:58:24'
     author: hgermi1@its.jnj.com
 functions:
   author: null
