adding test environment

--- a/environment-mapping.yaml
+++ b/environment-mapping.yaml
@@ -6,6 +6,8 @@
   environment: 'DEV'
 - branchNamePattern: 'beta'
   environment: 'BETA'
+- branchNamePattern: 'test'
+  environment: 'test'
 - branchNamePattern: 'pqa'
   environment: 'PQA'
 - branchNamePattern: 'production'
