--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -13,14 +13,14 @@ buildSystemDetails:
   modifiedAt: '2023-03-24 11:41:29'
 pipelines:
   pipelines/JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ:
-    name: JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    name: JDE_MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     description: ''
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-04 10:32:00'
-    modifiedAt: '2023-04-04 10:32:03'
+    modifiedAt: '2023-04-04 12:15:10'
     datasets:
       inputs: []
       outputs: []
@@ -40,6 +40,6 @@ functions:
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
