--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -135,6 +135,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MSTR_PLNG_FMLY_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: DAI_ETL_ID
     type: integer
     nullable: false
