--- a/src/datasets/MD_DELV_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_DELV_LINE/pbt_aspects.yml
@@ -142,6 +142,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: BILL_ICMPT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNFRM_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MFG_DTTM
     type: timestamp
     nullable: true
@@ -149,7 +163,21 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: DELV_BILL_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: DELV_CMPLT_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DELV_ICMPT_STS_CD
     type: string
     nullable: true
     metadata:
@@ -177,7 +205,21 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: GM_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ICMPT_STS_CD
     type: string
     nullable: true
     metadata:
@@ -192,6 +234,13 @@ schema:
       mappings: []
       tags: []
   - name: PRC_ICMPT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRCSG_TOT_STS_CD
     type: string
     nullable: true
     metadata:
