--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -738,7 +738,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 11:50:56'
-    modifiedAt: '2023-03-30 16:25:35'
+    modifiedAt: '2023-04-04 12:44:27'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARC
@@ -758,12 +758,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-03 12:09:01'
-    modifiedAt: '2023-04-03 15:08:21'
+    modifiedAt: '2023-04-04 13:10:12'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBPA
-      outputs: []
+      outputs:
+      - datasets/MD_SLS_DOC_PTNR_FUNC
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1087,7 +1088,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-04 13:10:12'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
