--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -806,14 +806,15 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-04-04 13:21:17'
+    modifiedAt: '2023-04-04 14:24:25'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARA
       - datasets/DS_SAP_01_NSDM_V_MARD
       - datasets/DS_SAP_01_NSDM_V_MCHB
       - datasets/DS_SAP_01_NSDM_V_MSKU
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2022,7 +2023,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-04 14:23:05'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
