JEKT-236 (Updated SET_FIELD_ORDER Gems) 🔁 Modified     - Pipeline        - SAP_MD_MATL_INV_HM2     - Dataset        - MD_MATL_INV

--- a/src/datasets/MD_MATL_INV/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV/pbt_aspects.yml
@@ -128,21 +128,21 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ' PLNT_IN_TRNST_QTY'
+  - name: PLNT_IN_TRNST_QTY
     type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ' FISC_YR_OF_CUR_PER'
+  - name: FISC_YR_OF_CUR_PER
     type: integer
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ' CUR_PER'
+  - name: CUR_PER
     type: integer
     nullable: true
     metadata:
