JEKT-176 Created jobs ❇️ New     - Job        - JOB_MD_MATL_INV
🔁 Modified
    - Pipeline
       - JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -789,7 +789,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-03-31 16:27:53'
+    modifiedAt: '2023-04-04 13:54:43'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
@@ -6855,6 +6855,31 @@ jobs:
     createdAt: '2023-03-28 17:29:19'
     modifiedAt: '2023-03-29 20:08:28'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_MATL_INV:
+    name: JOB_MD_MATL_INV
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_01_MD_MATL_INV
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: false
+    createdAt: '2023-04-04 14:54:35'
+    modifiedAt: '2023-04-04 15:03:36'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
