JEKT-14- Modified     - Pipeline        - JDE_MD_BOM_HDR_DEU_SJD_MTR_GMD_JEM_JSW_BW2_JES_JET

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -763,14 +763,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_MD_BOM_HDR_BW2:
-    name: JDE_MD_BOM_HDR_BW2
+    name: JDE_MD_BOM_HDR_DEU_SJD_MTR_GMD_JEM_JSW_BW2_JES_JET
     description: ''
     author: smille29@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-23 22:03:08'
-    modifiedAt: '2023-03-24 13:37:38'
+    modifiedAt: '2023-04-04 15:40:40'
     datasets:
       inputs:
       - datasets/JDE_F3002_ADT
