--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3,21 +3,31 @@ description: ''
 version: 0.0.1
 author: lsorarra@its.jnj.com
 language: python
-buildSystem: wheel
+buildSystem: ''
+buildSystemDetails:
+  artefactID: cdl_md_l1
+  parentArtefactID: cdl_l1_team
+  buildSystem: wheel
+  author: null
+  createdAt: '2023-03-24 14:53:47'
+  modifiedAt: '2023-03-24 14:53:47'
 pipelines:
   pipelines/JDE_01_DEU_F0401:
     name: JDE_01_DEU_F0401
     description: ''
     author: lsorarra@its.jnj.com
     mode: batch
+    artefactID: ''
     language: python
     createdAt: '2023-03-21 17:01:44'
-    modifiedAt: '2023-03-23 16:28:52'
+    modifiedAt: '2023-04-04 16:33:40'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0101
       - datasets/DS_JDE_01_F0401
-      outputs: []
+      outputs:
+      - datasets/DS_MD_SUP_PRCHSNG_ORG
+    subgraphs: []
     dependencies: {}
 datasets:
   datasets/DS_JDE_01_F0401:
@@ -25,7 +35,7 @@ datasets:
     description: ''
     author: lsorarra@its.jnj.com
     createdAt: '2023-03-21 17:17:48'
-    modifiedAt: '2023-03-21 17:17:48'
+    modifiedAt: '2023-04-04 15:35:39'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -50,9 +60,31 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-03-21 17:43:17'
         modifiedAt: '2023-03-21 17:43:17'
+  datasets/DS_MD_SUP_PRCHSNG_ORG:
+    name: DS_MD_SUP_PRCHSNG_ORG
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-04-04 16:05:45'
+    modifiedAt: '2023-04-04 16:05:45'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-04-04 16:05:45'
+        modifiedAt: '2023-04-04 16:05:45'
 templates: {}
 jobs: {}
-libraries: []
+functions:
+  author: null
+  createdAt: '2023-03-24 14:53:47'
+  modifiedAt: '2023-03-24 14:53:47'
+  gems: {}
+  udfs: {}
+  udafs: {}
+  expressions: {}
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
