JEKT-314 🔁 deleted all gems to restart     - Pipeline        - SAP_MD_DELV_LINE_BBA_BBL_BBN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,16 +20,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-03 18:08:25'
-    modifiedAt: '2023-04-03 18:40:08'
+    modifiedAt: '2023-04-04 16:58:37'
     datasets:
-      inputs:
-      - datasets/DS_SAP_01_LIKP
-      - datasets/DS_SAP_01_LIPS
-      - datasets/DS_SAP_01_TVM4T
-      - datasets/DS_SAP_01_VBAK
-      - datasets/DS_SAP_01_VBAP
-      outputs:
-      - datasets/MD_DELV_LINE
+      inputs: []
+      outputs: []
     subgraphs: []
     dependencies: {}
 datasets:
